lam router cho cac link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,8 @@
            <!-- <app-product-detail></app-product-detail> -->
            <!-- <app-content-new-grid></app-content-new-grid> -->
            <!-- <app-content-new-detail></app-content-new-detail> -->
-           <app-content-contact></app-content-contact>
+           <!-- <app-content-contact></app-content-contact> -->
+           <!-- <app-content-aboutus></app-content-aboutus> -->
+           <router-outlet></router-outlet>
       
         <app-footer></app-footer>
